made new load game option on menu page, and altered some of the spacing issues

--- a/src/css/chessboard-0.3.0.css
+++ b/src/css/chessboard-0.3.0.css
@@ -15,6 +15,9 @@
 
 /* board */
 .board-b72b1 {
+  position: fixed;
+  top: 50%;
+  left: 50%;
   border: 2px solid #404040;
   -moz-box-sizing: content-box;
   box-sizing: content-box;
